fix spacing on h1

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -253,7 +253,8 @@ figure.current {
   #annotation-view a {
     word-wrap: break-word; }
   #annotation-view h1 {
-    text-align: center; }
+    text-align: center;
+    line-height: 2.2rem; }
   #annotation-view h4 {
     text-align: center;
     margin-bottom: 30px; }
