--- a/src/scss/_annotation_view.scss
+++ b/src/scss/_annotation_view.scss
@@ -25,6 +25,7 @@
     
     h1 {
         text-align: center;
+        line-height: 2.2rem;
     }
 
     h4 {
